[project]
dependencies = [
    "mcp>=1.0.0",
    "click",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line too long — handled by formatter; not enforced here
    "B008",  # do not perform function calls in default argument — Flask patterns
]
